[gd_scene load_steps=3 format=2]

[ext_resource path="res://persons/persons.gd" type="Script" id=1]
[ext_resource path="res://Font/my_dynamicfont.tres" type="DynamicFont" id=2]

[node name="Persons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 93.0486
margin_top = 88.3459
margin_right = 593.049
margin_bottom = 488.346
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 49.0
margin_top = 42.0
margin_right = 449.0
margin_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 400.0
margin_bottom = 19.0
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 36.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Id："

[node name="LabelId" type="Label" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 36.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 170.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 80.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "出生年月："

[node name="LabelYearBorn" type="Label" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 84.0
margin_right = 84.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 304.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer3"]
margin_right = 80.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "死亡年月："

[node name="LabelYearDead" type="Label" parent="Panel/VBoxContainer/HBoxContainer/HBoxContainer3"]
margin_left = 84.0
margin_right = 84.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 23.0
margin_right = 400.0
margin_bottom = 42.0
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_right = 52.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 48.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "姓名："

[node name="LabelName" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 102.0
margin_right = 138.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_right = 32.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "字："

[node name="LabelCalledName" type="Label" parent="Panel/VBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_left = 36.0
margin_right = 36.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 46.0
margin_right = 400.0
margin_bottom = 65.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_right = 52.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 48.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "武力："

[node name="LabelBaseStrength" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_left = 72.0
margin_right = 124.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_right = 48.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "统率："

[node name="LabelBaseCommand" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_left = 144.0
margin_right = 196.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer3"]
margin_right = 48.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "智力："

[node name="LabelBaseIntelligence" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer3"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_left = 216.0
margin_right = 268.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer4"]
margin_right = 48.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "政治："

[node name="LabelBasePolitics" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer4"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer3"]
margin_left = 288.0
margin_right = 340.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer5"]
margin_right = 48.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "魅力："

[node name="LabelBaseGlamour" type="Label" parent="Panel/VBoxContainer/HBoxContainer3/HBoxContainer5"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
